force-app/main/default/objects/Case/fields/Domain_Case__c.field-meta.xml
<CustomField>
    <fullName>Domain_Case__c</fullName>
    <formula>IF( CreatedBy.Dominio_Usuario__c = $User.Dominio_Usuario__c  || $User.Dominio_Usuario__c = &quot;simetrik.com&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain Case</label>
    <type>Checkbox</type>
</CustomField>