force-app/main/default/objects/Case/fields/Filtro_partner__c.field-meta.xml
<CustomField>
    <fullName>Filtro_partner__c</fullName>
    <formula>IF( Account.Name = $User.Account_Name__c || $User.Dominio_Usuario__c = &quot;clouderconsulting.com&quot; || $User.Dominio_Usuario__c = &quot;simetrik.com&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filtro partner</label>
    <type>Checkbox</type>
</CustomField>