force-app/main/default/objects/Case/fields/What_can_view__c.field-meta.xml
<CustomField>
    <fullName>What_can_view__c</fullName>
    <formula>IF( $User.ProfileId = &quot;00eQo000001gdAr&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What can view</label>
    <type>Checkbox</type>
</CustomField>