force-app/main/default/objects/Case/listViews/Partner_Case.listView-meta.xml
<ListView>
    <fullName>Partner_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Filtro_partner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Partner Case</label>
</ListView>