force-app/main/default/objects/Case/listViews/Q1_Case.listView-meta.xml
<ListView>
    <fullName>Q1_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>What_can_view__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Q1</label>
    <queue>Q1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>